Ex Deorum 3.0
First port to 1.21 is complete. I have to document what changed for modpack makers later on.